# pitbull

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pitbull.toml.example
.github/workflows/: ci.yml
crates/pitbull-driver/: Cargo.toml  build.rs
crates/pitbull-driver/src/: main.rs
crates/pitbull-spec/: Cargo.toml
crates/pitbull-spec/src/: lib.rs
crates/pitbull-subset/: Cargo.toml  build.rs
crates/pitbull-subset/src/: config.rs  diagnostic.rs  lib.rs  mir_api.rs  mutation.rs  predicate.rs  reachability.rs  rules.rs  vc.rs  visitor.rs
crates/pitbull-subset/src/mir_api/: adapter.rs
crates/pitbull-subset/tests/: aorte_proofs.rs  integration.rs
crates/pitbull-subset/tests/corpus/: README.md
crates/pitbull-subset/tests/corpus/accept/: PB001_safe_checksum.rs  PB018_immutable_static.rs  PB031_static_dispatch.rs  PB041_decreasing_recursion.rs  PB043_char_radix_total.rs  PB043_int_method_total.rs  PB050_fixed_point.rs  PB054_bounded_index.rs
crates/pitbull-subset/tests/corpus/reject/: PB001_unsafe_block.rs  PB011_box_allocation.rs  PB018_static_mut.rs  PB031_dyn_trait.rs  PB041_undecorated_recursion.rs  PB043_char_radix_panic.rs  PB043_int_method_panic.rs  PB043_slice_panic.rs  PB043_unwrap_panic.rs  PB050_floating_point.rs  PB054_unbounded_index.rs
crates/pitbull-vc/: Cargo.toml
crates/pitbull-vc/src/: cert.rs  lib.rs  smt.rs  solver.rs  vc.rs
docs/: HANDOFF.md  PSS-1.md  SAFETY-MANUAL.md
