[package]
name        = "pitbull-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "cargo subcommand driver for the Pitbull deductive verifier"
[[bin]]
# This binary is invoked as `cargo pitbull` because cargo treats any
# binary named `cargo-<name>` on the PATH as a subcommand. Install via
# `cargo install --path crates/pitbull-driver`.
name = "cargo-pitbull"
path = "src/main.rs"
[dependencies]
pitbull-subset = { path = "../pitbull-subset" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
miette = { version = "7", features = ["fancy"] }
serde_json = "1"
[lints]
workspace = true
