[package]
name        = "pitbull-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "cargo subcommand driver for the Pitbull deductive verifier"
[[bin]]
# Cargo subcommand entry point. cargo treats any binary named `cargo-<name>`
# on the PATH as a subcommand, so this is invoked as `cargo pitbull`.
# Install via `cargo install --path crates/pitbull-driver`.
name = "cargo-pitbull"
path = "src/main.rs"
[[bin]]
# rustc-replacement wrapper. When `cargo pitbull check` runs, it sets
# `RUSTC_WORKSPACE_WRAPPER` to the absolute path of this binary so that
# cargo invokes it instead of `rustc` for every crate in the target
# workspace. The wrapper uses `rustc_driver` to run the standard compile
# pipeline AND inject the Pitbull subset-checking pass after MIR
# generation. This is the standard rustc-driver wrapper pattern.
#
# On stable (no opt-in), this binary compiles to a stub that prints a
# diagnostic and exits with a clear error — that way `cargo install`
# succeeds without nightly-toolchain-only dependencies, and any
# accidental wrapper invocation fails loudly rather than silently.
name = "pitbull-rustc"
path = "src/bin/pitbull-rustc.rs"
[dependencies]
# `test-helpers` exposes `SubsetConfig::default_for_test()` so the
# pitbull-rustc wrapper can run with a sane in-memory config when no
# `pitbull.toml` is present in the target project. This is the v0.2
# scaffold posture; once the driver reads `pitbull.toml` directly the
# feature can come off.
pitbull-subset = { path = "../pitbull-subset", features = ["test-helpers"] }
# pitbull-vc compiles `VcObligation`s produced by the visitor into
# SMT-LIB and dispatches them to an external solver (Z3 today). The
# wrapper iterates `SubsetReport.vc_obligations` after the MIR walk
# and surfaces each obligation's verdict on stderr alongside
# violations and audit notes.
pitbull-vc = { path = "../pitbull-vc" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
miette = { version = "7", features = ["fancy"] }
serde_json = "1"
[lints]
workspace = true
