[package]
name        = "pitbull-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Specification attribute macros for the Pitbull deductive verifier"
[lib]
proc-macro = true
[dependencies]
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full", "extra-traits"] }
[lints]
workspace = true
