[package]
name        = "pitbull-vc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Verification-condition generation and SMT dispatch for the Pitbull deductive verifier"

[dependencies]
# Shadow types from pitbull-subset (Span, etc.) so VC goals can point
# back at the same source-location representation the visitor uses.
pitbull-subset = { path = "../pitbull-subset" }

# Serialization for the on-disk SMT-LIB problem files and the
# proof-certificate format (v0.3 work; the field is here today so
# the format can be extended without API breaks).
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Proof-certificate signing. HMAC-SHA256 (symmetric) makes a certificate
# tamper-RESISTANT within a trust domain that holds the key (e.g. CI).
# Ed25519 (asymmetric, frontier #2, 2026-06-16) adds CROSS-DOMAIN
# non-repudiation: a third party verifies with only the PUBLIC key, never
# trusting the verifier — the qualification "don't-trust-the-verifier" story.
# These are the minimal, audited pure-Rust primitives (RustCrypto + the
# dalek-cryptography Ed25519), a deliberate, user-approved TCB dependency
# (the project otherwise ships no crypto).
sha2          = "0.10"
hmac          = "0.12"
ed25519-dalek = "2"

[lints]
workspace = true
